--- a/org.osgi.impl.bundle.midletcontainer/.classpath
+++ b/org.osgi.impl.bundle.midletcontainer/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="/org.osgi.service.application"/>
-	<classpathentry sourcepath="/osgi.released/osgi.jar" kind="lib" path="/osgi.released/osgi.jar"/>
+	<classpathentry sourcepath="/cnf/repo/osgi/osgi-4.0.0.jar" kind="lib" path="/cnf/repo/osgi/osgi-4.0.0.jar"/>
 	<classpathentry kind="src" path="/org.osgi.application"/>
 	<classpathentry kind="src" path="/org.osgi.impl.service.application"/>
-	<classpathentry sourcepath="/osgi.released/ee.minimum.jar" kind="lib" path="/osgi.released/ee.minimum.jar"/>
-	<classpathentry kind="lib" path="/licensed/jar/saxon.jar"/>
+	<classpathentry sourcepath="/cnf/repo/ee.minimum/ee.minimum-1.1.3.jar" kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/licensed/repo/com.icl.saxon/com.icl.saxon-6.5.1.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
