--- a/org.osgi.impl.framework.eclipse/.classpath
+++ b/org.osgi.impl.framework.eclipse/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="/licensed/jar/org.eclipse.osgi.jar"/>
+	<classpathentry exported="true" kind="lib" path="/licensed/repo/org.eclipse.osgi/org.eclipse.osgi-3.4.0.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="src"/>
