--- a/org.osgi.impl.service.deploymentadmin/.classpath
+++ b/org.osgi.impl.service.deploymentadmin/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.service.deploymentadmin"/>
-	<classpathentry kind="lib" path="/osgi.released/osgi.jar" sourcepath="/osgi.released/osgi.jar"/>
-	<classpathentry kind="lib" path="/osgi.released/ee.foundation.jar" sourcepath="/osgi.released/ee.foundation.jar"/>
-	<classpathentry kind="lib" path="/licensed/jar/saxon.jar"/>
+	<classpathentry kind="lib" path="/cnf/repo/osgi/osgi-4.1.0.jar" sourcepath="/cnf/repo/osgi/osgi-4.0.0.jar"/>
+	<classpathentry kind="lib" path="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar" sourcepath="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar"/>
+	<classpathentry kind="lib" path="/licensed/repo/com.icl.saxon/com.icl.saxon-6.5.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.impl.framework.eclipse"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
