--- a/org.osgi.impl.service.dmt/.classpath
+++ b/org.osgi.impl.service.dmt/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry path="src" kind="src"/>
 	<classpathentry path="/info.dmtree" combineaccessrules="false" kind="src"/>
-	<classpathentry path="/osgi.released/osgi.jar" kind="lib" sourcepath="/osgi.released/osgi.jar"/>
-	<classpathentry path="/osgi.released/ee.foundation.jar" kind="lib" sourcepath="/osgi.released/ee.foundation.jar"/>
-	<classpathentry path="/licensed/jar/saxon.jar" kind="lib"/>
+	<classpathentry path="/cnf/repo/osgi/osgi-4.0.0.jar" kind="lib" sourcepath="/cnf/repo/osgi/osgi-4.0.0.jar"/>
+	<classpathentry path="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar" kind="lib" sourcepath="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar"/>
+	<classpathentry path="/licensed/repo/com.icl.saxon/com.icl.saxon-6.5.1.jar" kind="lib"/>
 	<classpathentry path="src" kind="output"/>
 </classpath>
