New Build structure, adds component repository and allows bnd to be used

--- a/org.osgi.service.application/.classpath
+++ b/org.osgi.service.application/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry sourcepath="/osgi.released/ee.minimum.jar" kind="lib" path="/osgi.released/ee.minimum.jar"/>
+	<classpathentry sourcepath="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar" kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar"/>
 	<classpathentry kind="src" path="/org.osgi.framework"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
