--- a/org.osgi.service.condpermadmin/.classpath
+++ b/org.osgi.service.condpermadmin/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="/org.osgi.framework"/>
 	<classpathentry kind="src" path="/org.osgi.service.permissionadmin"/>
-	<classpathentry sourcepath="/osgi.released/ee.minimum.jar" kind="lib" path="/osgi.released/ee.minimum.jar"/>
+	<classpathentry sourcepath="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar" kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
