--- a/org.osgi.service.io/.classpath
+++ b/org.osgi.service.io/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry sourcepath="/osgi.released/ee.foundation.jar" kind="lib" path="/osgi.released/ee.foundation.jar"/>
+	<classpathentry sourcepath="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar" kind="lib" path="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
