--- a/org.osgi.service.navigation/.classpath
+++ b/org.osgi.service.navigation/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/osgi.released/ee.minimum.jar" sourcepath="/ee.minimum"/>
+	<classpathentry kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar" sourcepath="/ee.minimum"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.framework"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.util.measurement"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.util.position"/>
