--- a/org.osgi.service.transaction/.classpath
+++ b/org.osgi.service.transaction/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/osgi.released/ee.minimum.jar" sourcepath="/ee.minimum"/>
+	<classpathentry kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar" sourcepath="/ee.minimum"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
