--- a/org.osgi.service.webapplication/.classpath
+++ b/org.osgi.service.webapplication/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry path="/osgi.released/ee.minimum.jar" kind="lib" sourcepath="/osgi.released/ee.minimum.jar"/>
+	<classpathentry path="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar" kind="lib" sourcepath="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar"/>
 	<classpathentry path="src" kind="src"/>
 	<classpathentry path="src" kind="output"/>
 </classpath>
