New Build structure, adds component repository and allows bnd to be used

--- a/org.osgi.test.cases.activationpolicy/build.properties
+++ b/org.osgi.test.cases.activationpolicy/build.properties
@@ -28,17 +28,17 @@ expand.tblazy4.jar = [${p}.tblazy4], \
 expand.tblazy5.jar = [${p}.tblazy5]
 expand.tblazy6.jar = [${p}.tblazy6]
 expand.tbc.jar = ${p}.tbc
-include.${p}.jar = tbc.jar, \
+include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tbchain1.jar=tbchain1.jar, \
-	www/tbchain2.jar=tbchain2.jar, \
-	www/tbchain3.jar=tbchain3.jar, \
-	www/tbchain4.jar=tbchain4.jar, \
-	www/tbchain5.jar=tbchain5.jar, \
-	www/tblazy1.jar=tblazy1.jar, \
-	www/tblazy2.jar=tblazy2.jar, \
-	www/tblazy3.jar=tblazy3.jar, \
-	www/tblazy4.jar=tblazy4.jar, \
-	www/tblazy5.jar=tblazy5.jar, \
-	www/tblazy6.jar=tblazy6.jar
+	www/tbchain1.jar=${target-dir}/tbchain1.jar, \
+	www/tbchain2.jar=${target-dir}/tbchain2.jar, \
+	www/tbchain3.jar=${target-dir}/tbchain3.jar, \
+	www/tbchain4.jar=${target-dir}/tbchain4.jar, \
+	www/tbchain5.jar=${target-dir}/tbchain5.jar, \
+	www/tblazy1.jar=${target-dir}/tblazy1.jar, \
+	www/tblazy2.jar=${target-dir}/tblazy2.jar, \
+	www/tblazy3.jar=${target-dir}/tblazy3.jar, \
+	www/tblazy4.jar=${target-dir}/tblazy4.jar, \
+	www/tblazy5.jar=${target-dir}/tblazy5.jar, \
+	www/tblazy6.jar=${target-dir}/tblazy6.jar
 
