--- a/org.osgi.test.cases.application/.classpath
+++ b/org.osgi.test.cases.application/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry path="src" kind="src"/>
-	<classpathentry path="/osgi.released/ee.foundation.jar" kind="lib" sourcepath="/osgi.released/ee.foundation.jar"/>
-	<classpathentry path="/osgi.released/osgi.jar" kind="lib" sourcepath="/osgi.released/osgi.jar"/>
-	<classpathentry path="/osgi.released/osgi.internal.jar" kind="lib" sourcepath="/osgi.released/osgi.internal.jar"/>
-	<classpathentry path="/org.osgi.impl.bundle.midletcontainer" combineaccessrules="false" kind="src"/>
-	<classpathentry path="src" kind="output"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar" sourcepath="/cnf/repo/ee.foundation/ee.foundation-1.1.0.jar"/>
+	<classpathentry kind="lib" path="/cnf/repo/osgi/osgi-4.1.0.jar" sourcepath="/cnf/repo/osgi/osgi-4.0.0.jar"/>
+	<classpathentry kind="lib" path="/osgi.released/osgi.internal.jar" sourcepath="/osgi.released/osgi.internal.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.impl.bundle.midletcontainer"/>
+	<classpathentry kind="output" path="src"/>
 </classpath>
