--- a/org.osgi.test.cases.cm/build.properties
+++ b/org.osgi.test.cases.cm/build.properties
@@ -5,10 +5,9 @@ jars.compile.order = tb1.jar, \
                      org.osgi.test.cases.cm.jar
 expand.org.osgi.test.cases.cm.jar = [org.osgi.test.cases.cm]
 expand.tbc.jar = org.osgi.test.cases.cm.tbc, org.osgi.test.cases.cm.common
-include.org.osgi.test.cases.cm.jar = tbc.jar, log.ref
 expand.tb1.jar = org.osgi.test.cases.cm.tb1, org.osgi.test.cases.cm.common
 expand.tb2.jar = org.osgi.test.cases.cm.tb2
-include.org.osgi.test.cases.cm.jar = tbc.jar, \
+include.org.osgi.test.cases.cm.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar
