New Build structure, adds component repository and allows bnd to be used

--- a/org.osgi.test.cases.deploymentadmin.mo/build.properties
+++ b/org.osgi.test.cases.deploymentadmin.mo/build.properties
@@ -4,8 +4,8 @@ jars.compile.order = tbc.jar, \
 expand.${p}.jar = ${p}
 expand.tbc.jar = [${p}.tbc.*]
 expand.tb1.jar = [${p}.tb1.*]
-include.${p}.jar = tbc.jar,\
-				   tb1.jar,\
+include.${p}.jar = ${target-dir}/tbc.jar,\
+				   ${target-dir}/tb1.jar,\
 www/simple.dp=delivered/simple.dp,\
 www/bundle_from_other.dp=delivered/bundle_from_other.dp,\
 www/bundle_throws_exception.dp=delivered/bundle_throws_exception.dp,\
