--- a/org.osgi.test.cases.deploymentadmin.tc1/build.properties
+++ b/org.osgi.test.cases.deploymentadmin.tc1/build.properties
@@ -4,8 +4,8 @@ jars.compile.order = tbc.jar, \
 expand.${p}.jar = ${p}
 expand.tb1.jar = [${p}.tb1.*]
 expand.tbc.jar = [${p}.tbc.*]
-include.${p}.jar = tbc.jar, \
-	www/tb1.jar=tb1.jar,\
+include.${p}.jar = ${target-dir}/tbc.jar, \
+	www/tb1.jar=${target-dir}/tb1.jar,\
 	www/simple.dp=res/simple.dp,\
 	www/simple_resource.dp=res/simple_resource.dp,\
 	www/simple_clone.dp=res/simple_clone.dp,\
