--- a/org.osgi.test.cases.deploymentadmin.tc2/build.properties
+++ b/org.osgi.test.cases.deploymentadmin.tc2/build.properties
@@ -2,7 +2,7 @@ jars.compile.order = tbc.jar, \
                      ${p}.jar
 expand.${p}.jar = ${p}
 expand.tbc.jar = [${p}.tbc.*]
-include.${p}.jar = tbc.jar, \
+include.${p}.jar = ${target-dir}/tbc.jar, \
     www/simple.dp=res/simple.dp,\
 	www/rp_resource_install.dp=res/rp_resource_install.dp,\
 	www/rp_resource_update.dp=res/rp_resource_update.dp,\
