--- a/org.osgi.test.cases.device/build.properties
+++ b/org.osgi.test.cases.device/build.properties
@@ -14,14 +14,14 @@ expand.drv4.jar = org.osgi.test.cases.device.drv4
 expand.drv5.jar = org.osgi.test.cases.device.drv5
 expand.drv6.jar = org.osgi.test.cases.device.drv6
 expand.drv7.jar = org.osgi.test.cases.device.drv7
-include.org.osgi.test.cases.device.jar = tbc.jar=tbc.jar, \
+include.org.osgi.test.cases.device.jar = tbc.jar=${target-dir}/tbc.jar, \
 	log.ref=src/org/osgi/test/cases/device/tbc/log.ref, \
-	www/dev1.jar=dev1.jar, \
-	www/dev2.jar=dev2.jar, \
-	www/drv1.jar=drv1.jar, \
-	www/drv2.jar=drv2.jar, \
-	www/drv3.jar=drv3.jar, \
-	www/drv4.jar=drv4.jar, \
-	www/drv5.jar=drv5.jar, \
-	www/drv6.jar=drv6.jar, \
-	www/drv7.jar=drv7.jar
+	www/dev1.jar=${target-dir}/dev1.jar, \
+	www/dev2.jar=${target-dir}/dev2.jar, \
+	www/drv1.jar=${target-dir}/drv1.jar, \
+	www/drv2.jar=${target-dir}/drv2.jar, \
+	www/drv3.jar=${target-dir}/drv3.jar, \
+	www/drv4.jar=${target-dir}/drv4.jar, \
+	www/drv5.jar=${target-dir}/drv5.jar, \
+	www/drv6.jar=${target-dir}/drv6.jar, \
+	www/drv7.jar=${target-dir}/drv7.jar
