--- a/org.osgi.test.cases.dmt.tc1/build.properties
+++ b/org.osgi.test.cases.dmt.tc1/build.properties
@@ -2,4 +2,4 @@ jars.compile.order = tbc.jar, \
                      ${p}.jar
 expand.${p}.jar = ${p}
 expand.tbc.jar = [${p}.tbc.*]
-include.${p}.jar = tbc.jar
+include.${p}.jar = ${target-dir}/tbc.jar
