--- a/org.osgi.test.cases.dmt.tc2/build.properties
+++ b/org.osgi.test.cases.dmt.tc2/build.properties
@@ -4,5 +4,5 @@ jars.compile.order = tb1.jar, \
 expand.${p}.jar = ${p}
 expand.tb1.jar = [${p}.tb1.*]
 expand.tbc.jar = [${p}.tbc.*]
-include.${p}.jar = tbc.jar, \
-		www/tb1.jar=tb1.jar
+include.${p}.jar = ${target-dir}/tbc.jar, \
+		www/tb1.jar=${target-dir}/tb1.jar
