--- a/org.osgi.test.cases.framework.classloading/build.properties
+++ b/org.osgi.test.cases.framework.classloading/build.properties
@@ -248,103 +248,103 @@ include.tb16g.jar = test/package/resources/resource.txt=tb16g/resource.txt, \
 					test/package/resources/tb16g-resource.txt=tb16g/tb16g-resource.txt
 include.tb16k.jar = test/package/resources/resource.txt=tb16a/resource.txt, \
 					test/package/resources/tb16a-resource.txt=tb16a/tb16a-resource.txt
-include.${p}.jar = tbc.jar, \
+include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb1a.jar=tb1a.jar, \
-	www/tb1b.jar=tb1b.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb2a.jar=tb2a.jar, \
-	www/tb3.jar=tb3.jar, \
-	www/tb4a.jar=tb4a.jar, \
-	www/tb4b.jar=tb4b.jar, \
-	www/tb4c.jar=tb4c.jar, \
-	www/tb4d.jar=tb4d.jar, \
-	www/tb4e.jar=tb4e.jar, \
-	www/tb4f.jar=tb4f.jar, \
-	www/tb4g.jar=tb4g.jar, \
-	www/tb5.jar=tb5.jar, \
-	www/tb5a.jar=tb5a.jar, \
-	www/tb5b.jar=tb5b.jar, \
-	www/tb5c.jar=tb5c.jar, \
-	www/tb6a.jar=tb6a.jar, \
-	www/tb6b.jar=tb6b.jar, \
-	www/tb6c.jar=tb6c.jar, \
-	www/tb6d.jar=tb6d.jar, \
-	www/tb7a.jar=tb7a.jar, \
-	www/tb7b.jar=tb7b.jar, \
-	www/tb7c.jar=tb7c.jar, \
-	www/tb7d.jar=tb7d.jar, \
-	www/tb7e.jar=tb7e.jar, \
-	www/tb8a.jar=tb8a.jar, \
-	www/tb8b.jar=tb8b.jar, \
-	www/tb8c.jar=tb8c.jar, \
-	www/tb8d.jar=tb8d.jar, \
-	www/tb8e.jar=tb8e.jar, \
-	www/tb8f.jar=tb8f.jar, \
-	www/tb9a.jar=tb9a.jar, \
-	www/tb9b.jar=tb9b.jar, \
-	www/tb9c.jar=tb9c.jar, \
-	www/tb9d.jar=tb9d.jar, \
-	www/tb10a.jar=tb10a.jar, \
-	www/tb11a.jar=tb11a.jar, \
-	www/tb11b.jar=tb11b.jar, \
-	www/tb11c.jar=tb11c.jar, \
-	www/tb11d.jar=tb11d.jar, \
-	www/tb11e.jar=tb11e.jar, \
-	www/tb12a.jar=tb12a.jar, \
-	www/tb12b.jar=tb12b.jar, \
-	www/tb13a.jar=tb13a.jar, \
-	www/tb13b.jar=tb13b.jar, \
-	www/tb13c.jar=tb13c.jar, \
-	www/tb13d.jar=tb13d.jar, \
-	www/tb13e.jar=tb13e.jar, \
-	www/tb13f.jar=tb13f.jar, \
-	www/tb13g.jar=tb13g.jar, \
-	www/tb13h.jar=tb13h.jar, \
-	www/tb13i.jar=tb13i.jar, \
-	www/tb13j.jar=tb13j.jar, \
-	www/tb13k.jar=tb13k.jar, \
-	www/tb13l.jar=tb13l.jar, \
-	www/tb13m.jar=tb13m.jar, \
-	www/tb13n.jar=tb13n.jar, \
-	www/tb13o.jar=tb13o.jar, \
-	www/tb13p.jar=tb13p.jar, \
-	www/tb14a.jar=tb14a.jar, \
-	www/tb14b.jar=tb14b.jar, \
-	www/tb14c.jar=tb14c.jar, \
-	www/tb14d.jar=tb14d.jar, \
-	www/tb14e.jar=tb14e.jar, \
-	www/tb14f.jar=tb14f.jar, \
-	www/tb14g.jar=tb14g.jar, \
-	www/tb14h.jar=tb14h.jar, \
-	www/tb15a.jar=tb15a.jar, \
-	www/tb15b.jar=tb15b.jar, \
-	www/tb15c.jar=tb15c.jar, \
-	www/tb15d.jar=tb15d.jar, \
-	www/tb15e.jar=tb15e.jar, \
-	www/tb15f.jar=tb15f.jar, \
-	www/tb15g.jar=tb15g.jar, \
-	www/tb15h.jar=tb15h.jar, \
-	www/tb15i.jar=tb15i.jar, \
-	www/tb16a.jar=tb16a.jar, \
-	www/tb16b.jar=tb16b.jar, \
-	www/tb16c.jar=tb16c.jar, \
-	www/tb16d.jar=tb16d.jar, \
-	www/tb16e.jar=tb16e.jar, \
-	www/tb16f.jar=tb16f.jar, \
-	www/tb16g.jar=tb16g.jar, \
-	www/tb16h.jar=tb16h.jar, \
-	www/tb16i.jar=tb16i.jar, \
-	www/tb16j.jar=tb16j.jar, \
-	www/tb16k.jar=tb16k.jar, \
-	www/tb17a.jar=tb17a.jar, \
-	www/tb17b.jar=tb17b.jar, \
-	www/tb17c.jar=tb17c.jar, \
-	www/tb17d.jar=tb17d.jar, \
-	www/tb17e.jar=tb17e.jar, \
-	www/tb17f.jar=tb17f.jar, \
-	www/tb17g.jar=tb17g.jar, \
-	www/tb17h.jar=tb17h.jar, \
-	www/tb17i.jar=tb17i.jar, \
-	www/tb17j.jar=tb17j.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb1a.jar=${target-dir}/tb1a.jar, \
+	www/tb1b.jar=${target-dir}/tb1b.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb2a.jar=${target-dir}/tb2a.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar, \
+	www/tb4a.jar=${target-dir}/tb4a.jar, \
+	www/tb4b.jar=${target-dir}/tb4b.jar, \
+	www/tb4c.jar=${target-dir}/tb4c.jar, \
+	www/tb4d.jar=${target-dir}/tb4d.jar, \
+	www/tb4e.jar=${target-dir}/tb4e.jar, \
+	www/tb4f.jar=${target-dir}/tb4f.jar, \
+	www/tb4g.jar=${target-dir}/tb4g.jar, \
+	www/tb5.jar=${target-dir}/tb5.jar, \
+	www/tb5a.jar=${target-dir}/tb5a.jar, \
+	www/tb5b.jar=${target-dir}/tb5b.jar, \
+	www/tb5c.jar=${target-dir}/tb5c.jar, \
+	www/tb6a.jar=${target-dir}/tb6a.jar, \
+	www/tb6b.jar=${target-dir}/tb6b.jar, \
+	www/tb6c.jar=${target-dir}/tb6c.jar, \
+	www/tb6d.jar=${target-dir}/tb6d.jar, \
+	www/tb7a.jar=${target-dir}/tb7a.jar, \
+	www/tb7b.jar=${target-dir}/tb7b.jar, \
+	www/tb7c.jar=${target-dir}/tb7c.jar, \
+	www/tb7d.jar=${target-dir}/tb7d.jar, \
+	www/tb7e.jar=${target-dir}/tb7e.jar, \
+	www/tb8a.jar=${target-dir}/tb8a.jar, \
+	www/tb8b.jar=${target-dir}/tb8b.jar, \
+	www/tb8c.jar=${target-dir}/tb8c.jar, \
+	www/tb8d.jar=${target-dir}/tb8d.jar, \
+	www/tb8e.jar=${target-dir}/tb8e.jar, \
+	www/tb8f.jar=${target-dir}/tb8f.jar, \
+	www/tb9a.jar=${target-dir}/tb9a.jar, \
+	www/tb9b.jar=${target-dir}/tb9b.jar, \
+	www/tb9c.jar=${target-dir}/tb9c.jar, \
+	www/tb9d.jar=${target-dir}/tb9d.jar, \
+	www/tb10a.jar=${target-dir}/tb10a.jar, \
+	www/tb11a.jar=${target-dir}/tb11a.jar, \
+	www/tb11b.jar=${target-dir}/tb11b.jar, \
+	www/tb11c.jar=${target-dir}/tb11c.jar, \
+	www/tb11d.jar=${target-dir}/tb11d.jar, \
+	www/tb11e.jar=${target-dir}/tb11e.jar, \
+	www/tb12a.jar=${target-dir}/tb12a.jar, \
+	www/tb12b.jar=${target-dir}/tb12b.jar, \
+	www/tb13a.jar=${target-dir}/tb13a.jar, \
+	www/tb13b.jar=${target-dir}/tb13b.jar, \
+	www/tb13c.jar=${target-dir}/tb13c.jar, \
+	www/tb13d.jar=${target-dir}/tb13d.jar, \
+	www/tb13e.jar=${target-dir}/tb13e.jar, \
+	www/tb13f.jar=${target-dir}/tb13f.jar, \
+	www/tb13g.jar=${target-dir}/tb13g.jar, \
+	www/tb13h.jar=${target-dir}/tb13h.jar, \
+	www/tb13i.jar=${target-dir}/tb13i.jar, \
+	www/tb13j.jar=${target-dir}/tb13j.jar, \
+	www/tb13k.jar=${target-dir}/tb13k.jar, \
+	www/tb13l.jar=${target-dir}/tb13l.jar, \
+	www/tb13m.jar=${target-dir}/tb13m.jar, \
+	www/tb13n.jar=${target-dir}/tb13n.jar, \
+	www/tb13o.jar=${target-dir}/tb13o.jar, \
+	www/tb13p.jar=${target-dir}/tb13p.jar, \
+	www/tb14a.jar=${target-dir}/tb14a.jar, \
+	www/tb14b.jar=${target-dir}/tb14b.jar, \
+	www/tb14c.jar=${target-dir}/tb14c.jar, \
+	www/tb14d.jar=${target-dir}/tb14d.jar, \
+	www/tb14e.jar=${target-dir}/tb14e.jar, \
+	www/tb14f.jar=${target-dir}/tb14f.jar, \
+	www/tb14g.jar=${target-dir}/tb14g.jar, \
+	www/tb14h.jar=${target-dir}/tb14h.jar, \
+	www/tb15a.jar=${target-dir}/tb15a.jar, \
+	www/tb15b.jar=${target-dir}/tb15b.jar, \
+	www/tb15c.jar=${target-dir}/tb15c.jar, \
+	www/tb15d.jar=${target-dir}/tb15d.jar, \
+	www/tb15e.jar=${target-dir}/tb15e.jar, \
+	www/tb15f.jar=${target-dir}/tb15f.jar, \
+	www/tb15g.jar=${target-dir}/tb15g.jar, \
+	www/tb15h.jar=${target-dir}/tb15h.jar, \
+	www/tb15i.jar=${target-dir}/tb15i.jar, \
+	www/tb16a.jar=${target-dir}/tb16a.jar, \
+	www/tb16b.jar=${target-dir}/tb16b.jar, \
+	www/tb16c.jar=${target-dir}/tb16c.jar, \
+	www/tb16d.jar=${target-dir}/tb16d.jar, \
+	www/tb16e.jar=${target-dir}/tb16e.jar, \
+	www/tb16f.jar=${target-dir}/tb16f.jar, \
+	www/tb16g.jar=${target-dir}/tb16g.jar, \
+	www/tb16h.jar=${target-dir}/tb16h.jar, \
+	www/tb16i.jar=${target-dir}/tb16i.jar, \
+	www/tb16j.jar=${target-dir}/tb16j.jar, \
+	www/tb16k.jar=${target-dir}/tb16k.jar, \
+	www/tb17a.jar=${target-dir}/tb17a.jar, \
+	www/tb17b.jar=${target-dir}/tb17b.jar, \
+	www/tb17c.jar=${target-dir}/tb17c.jar, \
+	www/tb17d.jar=${target-dir}/tb17d.jar, \
+	www/tb17e.jar=${target-dir}/tb17e.jar, \
+	www/tb17f.jar=${target-dir}/tb17f.jar, \
+	www/tb17g.jar=${target-dir}/tb17g.jar, \
+	www/tb17h.jar=${target-dir}/tb17h.jar, \
+	www/tb17i.jar=${target-dir}/tb17i.jar, \
+	www/tb17j.jar=${target-dir}/tb17j.jar
