--- a/org.osgi.test.cases.framework.div/build.properties
+++ b/org.osgi.test.cases.framework.div/build.properties
@@ -78,35 +78,35 @@ include.tb14.jar = localization/bundlemanifest_pt.properties = tb14/bundlemanife
 include.tb23.jar = localization/bundlemanifest_es_ES.properties = tb23/bundlemanifest_es_ES.properties, \
                    OSGI-INF/l10n/bundle_es_ES.properties = tb23/bundle_es_ES.properties  
 
-include.tbc.jar = extraclass/tb6.jar=tb6.jar
-include.org.osgi.test.cases.framework.div.jar = tbc.jar=tbc.jar, \
+include.tbc.jar = extraclass/tb6.jar=${target-dir}/tb6.jar
+include.org.osgi.test.cases.framework.div.jar = tbc.jar=${target-dir}/tbc.jar, \
 	log.ref=log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar, \
-	www/tb4.jar=tb4.jar, \
-	www/tb5.jar=tb5.jar, \
-	www/tb7.jar=tb7.jar, \
-    www/tb8.jar=tb8.jar, \
-    www/tb9.jar=tb9.jar, \
-    www/tb9a.jar=tb9a.jar, \
-    www/tb10.jar=tb10.jar, \
-	www/tb11.jar=tb11.jar, \
-    www/tb12.jar=tb12.jar, \
-	www/tb13.jar=tb13.jar, \
-	www/tb14.jar=tb14.jar, \
-	www/tb15.jar=tb15.jar, \
-	www/tb16.jar=tb16.jar, \
-	www/tb17.jar=tb17.jar, \
-	www/tb18.jar=tb18.jar, \
-	www/tb19.jar=tb19.jar, \
-	www/tb20.jar=tb20.jar, \
-	www/tb21.jar=tb21.jar, \
-	www/tb22.jar=tb22.jar, \
-	www/tb23.jar=tb23.jar, \
-	www/tb24a.jar=tb24a.jar, \
-	www/tb24b.jar=tb24b.jar, \
-	www/tb24c.jar=tb24c.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar, \
+	www/tb4.jar=${target-dir}/tb4.jar, \
+	www/tb5.jar=${target-dir}/tb5.jar, \
+	www/tb7.jar=${target-dir}/tb7.jar, \
+    www/tb8.jar=${target-dir}/tb8.jar, \
+    www/tb9.jar=${target-dir}/tb9.jar, \
+    www/tb9a.jar=${target-dir}/tb9a.jar, \
+    www/tb10.jar=${target-dir}/tb10.jar, \
+	www/tb11.jar=${target-dir}/tb11.jar, \
+    www/tb12.jar=${target-dir}/tb12.jar, \
+	www/tb13.jar=${target-dir}/tb13.jar, \
+	www/tb14.jar=${target-dir}/tb14.jar, \
+	www/tb15.jar=${target-dir}/tb15.jar, \
+	www/tb16.jar=${target-dir}/tb16.jar, \
+	www/tb17.jar=${target-dir}/tb17.jar, \
+	www/tb18.jar=${target-dir}/tb18.jar, \
+	www/tb19.jar=${target-dir}/tb19.jar, \
+	www/tb20.jar=${target-dir}/tb20.jar, \
+	www/tb21.jar=${target-dir}/tb21.jar, \
+	www/tb22.jar=${target-dir}/tb22.jar, \
+	www/tb23.jar=${target-dir}/tb23.jar, \
+	www/tb24a.jar=${target-dir}/tb24a.jar, \
+	www/tb24b.jar=${target-dir}/tb24b.jar, \
+	www/tb24c.jar=${target-dir}/tb24c.jar
 btool.failok=true
 btool.noextraheaders=true
 custom = true
