--- a/org.osgi.test.cases.framework.filter/build.properties
+++ b/org.osgi.test.cases.framework.filter/build.properties
@@ -4,6 +4,6 @@ jars.compile.order = tb1.jar, \
 expand.org.osgi.test.cases.framework.filter.jar = org.osgi.test.cases.framework.filter
 expand.tbc.jar = [org.osgi.test.cases.framework.filter.tbc]
 expand.tb1.jar = [org.osgi.test.cases.framework.filter.tb1]
-include.org.osgi.test.cases.framework.filter.jar = tbc.jar=tbc.jar, \
-    www/tb1.jar=tb1.jar, \
+include.org.osgi.test.cases.framework.filter.jar = tbc.jar=${target-dir}/tbc.jar, \
+    www/tb1.jar=${target-dir}/tb1.jar, \
 	log.ref=log.ref
