--- a/org.osgi.test.cases.framework.fragments/build.properties
+++ b/org.osgi.test.cases.framework.fragments/build.properties
@@ -104,68 +104,68 @@ expand.tb19.jar = ${p}.tb19
 expand.tbc.jar = [${p}.tbc]
 include.tb1g.jar = resources/notinhost.txt = tb1g/notinhost.txt
 include.tb1a.jar = resources/resource.txt = tb1a/resource.txt, \
-	resources/tb1g.jar = tb1g.jar, \
-	resources/tb1h.jar = tb1h.jar
-include.tb1b.jar = tb1c.jar = tb1c.jar, \
+	resources/tb1g.jar = ${target-dir}/tb1g.jar, \
+	resources/tb1h.jar = ${target-dir}/tb1h.jar
+include.tb1b.jar = tb1c.jar = ${target-dir}/tb1c.jar, \
 	resources/notinhost.txt = tb1b/notinhost.txt
 include.tb1c.jar = resources/resource.txt = tb1c/resource.txt
 include.tb1i.jar = resources/notinhost.txt = tb1i/notinhost.txt
 include.tb7c.jar = testresources/resource.txt = tb7c/resource.txt
 include.tb7e.jar = testresources/resource.txt = tb7e/resource.txt
 include.tb7g.jar = resources/resource.txt = tb7g/resource.txt
-include.tb16a.jar = resources/tb16b.jar = tb16b.jar
-include.tb17a.jar = resources/tb17b.jar = tb17b.jar
-include.tb18.jar = resources/tb16b.jar = tb16b.jar
-include.tb19.jar = resources/tb17b.jar = tb17b.jar
-include.${p}.jar = tbc.jar, \
+include.tb16a.jar = resources/tb16b.jar = ${target-dir}/tb16b.jar
+include.tb17a.jar = resources/tb17b.jar = ${target-dir}/tb17b.jar
+include.tb18.jar = resources/tb16b.jar = ${target-dir}/tb16b.jar
+include.tb19.jar = resources/tb17b.jar = ${target-dir}/tb17b.jar
+include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1a.jar=tb1a.jar, \
-	www/tb1b.jar=tb1b.jar, \
-	www/tb1c.jar=tb1c.jar, \
-	www/tb1d.jar=tb1d.jar, \
-	www/tb1e.jar=tb1e.jar, \
-	www/tb1f.jar=tb1f.jar, \
-	www/tb1g.jar=tb1g.jar, \
-	www/tb1h.jar=tb1h.jar, \
-	www/tb1i.jar=tb1i.jar, \
-	www/tb2a.jar=tb2a.jar, \
-	www/tb2b.jar=tb2b.jar, \
-	www/tb2c.jar=tb2c.jar, \
-	www/tb2d.jar=tb2d.jar, \
-	www/tb3a.jar=tb3a.jar, \
-	www/tb3b.jar=tb3b.jar, \
-	www/tb3c.jar=tb3c.jar, \
-	www/tb3d.jar=tb3d.jar, \
-	www/tb3e.jar=tb3e.jar, \
-	www/tb3f.jar=tb3f.jar, \
-	www/tb7a.jar=tb7a.jar, \
-	www/tb7b.jar=tb7b.jar, \
-	www/tb7c.jar=tb7c.jar, \
-	www/tb7d.jar=tb7d.jar, \
-	www/tb7e.jar=tb7e.jar, \
-	www/tb7f.jar=tb7f.jar, \
-	www/tb7g.jar=tb7g.jar, \
-	www/tb7h.jar=tb7h.jar, \
-	www/tb8a.jar=tb8a.jar, \
-	www/tb8b.jar=tb8b.jar, \
-	www/tb8c.jar=tb8c.jar, \
-	www/tb8d.jar=tb8d.jar, \
-	www/tb20.jar=tb20.jar, \
-	www/tb4.jar=tb4.jar, \
-	www/tb5.jar=tb5.jar, \
-	www/tb6.jar=tb6.jar, \
-	www/tb21.jar=tb21.jar, \
-	www/tb22.jar=tb22.jar, \
-	www/tb9.jar=tb9.jar, \
-	www/tb10.jar=tb10.jar, \
-	www/tb11.jar=tb11.jar, \
-	www/tb12.jar=tb12.jar, \
-	www/tb13.jar=tb13.jar, \
-	www/tb14.jar=tb14.jar, \
-	www/tb15.jar=tb15.jar, \
-	www/tb16a.jar=tb16a.jar, \
-	www/tb17a.jar=tb17a.jar, \
-	www/tb18.jar=tb18.jar, \
-	www/tb19.jar=tb19.jar
+	www/tb1a.jar=${target-dir}/tb1a.jar, \
+	www/tb1b.jar=${target-dir}/tb1b.jar, \
+	www/tb1c.jar=${target-dir}/tb1c.jar, \
+	www/tb1d.jar=${target-dir}/tb1d.jar, \
+	www/tb1e.jar=${target-dir}/tb1e.jar, \
+	www/tb1f.jar=${target-dir}/tb1f.jar, \
+	www/tb1g.jar=${target-dir}/tb1g.jar, \
+	www/tb1h.jar=${target-dir}/tb1h.jar, \
+	www/tb1i.jar=${target-dir}/tb1i.jar, \
+	www/tb2a.jar=${target-dir}/tb2a.jar, \
+	www/tb2b.jar=${target-dir}/tb2b.jar, \
+	www/tb2c.jar=${target-dir}/tb2c.jar, \
+	www/tb2d.jar=${target-dir}/tb2d.jar, \
+	www/tb3a.jar=${target-dir}/tb3a.jar, \
+	www/tb3b.jar=${target-dir}/tb3b.jar, \
+	www/tb3c.jar=${target-dir}/tb3c.jar, \
+	www/tb3d.jar=${target-dir}/tb3d.jar, \
+	www/tb3e.jar=${target-dir}/tb3e.jar, \
+	www/tb3f.jar=${target-dir}/tb3f.jar, \
+	www/tb7a.jar=${target-dir}/tb7a.jar, \
+	www/tb7b.jar=${target-dir}/tb7b.jar, \
+	www/tb7c.jar=${target-dir}/tb7c.jar, \
+	www/tb7d.jar=${target-dir}/tb7d.jar, \
+	www/tb7e.jar=${target-dir}/tb7e.jar, \
+	www/tb7f.jar=${target-dir}/tb7f.jar, \
+	www/tb7g.jar=${target-dir}/tb7g.jar, \
+	www/tb7h.jar=${target-dir}/tb7h.jar, \
+	www/tb8a.jar=${target-dir}/tb8a.jar, \
+	www/tb8b.jar=${target-dir}/tb8b.jar, \
+	www/tb8c.jar=${target-dir}/tb8c.jar, \
+	www/tb8d.jar=${target-dir}/tb8d.jar, \
+	www/tb20.jar=${target-dir}/tb20.jar, \
+	www/tb4.jar=${target-dir}/tb4.jar, \
+	www/tb5.jar=${target-dir}/tb5.jar, \
+	www/tb6.jar=${target-dir}/tb6.jar, \
+	www/tb21.jar=${target-dir}/tb21.jar, \
+	www/tb22.jar=${target-dir}/tb22.jar, \
+	www/tb9.jar=${target-dir}/tb9.jar, \
+	www/tb10.jar=${target-dir}/tb10.jar, \
+	www/tb11.jar=${target-dir}/tb11.jar, \
+	www/tb12.jar=${target-dir}/tb12.jar, \
+	www/tb13.jar=${target-dir}/tb13.jar, \
+	www/tb14.jar=${target-dir}/tb14.jar, \
+	www/tb15.jar=${target-dir}/tb15.jar, \
+	www/tb16a.jar=${target-dir}/tb16a.jar, \
+	www/tb17a.jar=${target-dir}/tb17a.jar, \
+	www/tb18.jar=${target-dir}/tb18.jar, \
+	www/tb19.jar=${target-dir}/tb19.jar
 verbose=true
 btool.failok=true
