--- a/org.osgi.test.cases.framework.classpath/build.properties
+++ b/org.osgi.test.cases.framework.classpath/build.properties
@@ -13,10 +13,10 @@ expand.tb3.jar = [org.osgi.test.cases.framework.classpath.tb3]
 expand.tb4a.jar = org.osgi.test.cases.framework.classpath.tb4a, [org.osgi.test.cases.framework.classpath.tb4a.exp]
 expand.tb4b.jar = [org.osgi.test.cases.framework.classpath.tb4b]
 expand.org.osgi.test.cases.framework.classpath.jar = org.osgi.test.cases.framework.classpath
-include.org.osgi.test.cases.framework.classpath.jar = www/tb1.jar=tb1.jar,\
-                     www/tb2.jar=tb2.jar,\
-                     www/tb3.jar=tb3.jar,\
-                     www/tb4a.jar=tb4a.jar,\
-                     www/tb4b.jar=tb4b.jar,\
-                     tbc.jar,\
+include.org.osgi.test.cases.framework.classpath.jar = www/tb1.jar=${target-dir}/tb1.jar,\
+                     www/tb2.jar=${target-dir}/tb2.jar,\
+                     www/tb3.jar=${target-dir}/tb3.jar,\
+                     www/tb4a.jar=${target-dir}/tb4a.jar,\
+                     www/tb4b.jar=${target-dir}/tb4b.jar,\
+                     ${target-dir}/tbc.jar,\
                      src/org/osgi/test/cases/framework/classpath/tbc/log.ref
