--- a/org.osgi.test.cases.framework.dynpkgimport/build.properties
+++ b/org.osgi.test.cases.framework.dynpkgimport/build.properties
@@ -7,13 +7,13 @@ expand.tb1.jar = [org.osgi.test.cases.framework.dynpkgimport.tb1]
 expand.tb2.jar = [org.osgi.test.cases.framework.dynpkgimport.tb2]
 expand.tb3.jar = [org.osgi.test.cases.framework.dynpkgimport.tb3], [org.osgi.test.cases.framework.dynpkgimport.tlx]
 expand.tlx.jar = [org.osgi.test.cases.framework.dynpkgimport.tlx]
-include.org.osgi.test.cases.framework.dynpkgimport.jar = tbc.jar=tbc.jar, \
+include.org.osgi.test.cases.framework.dynpkgimport.jar = tbc.jar=${target-dir}/tbc.jar, \
 	log.ref=log.ref, \
-	www/tb0.jar=tb0.jar, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar, \
-	www/tlx.jar=tlx.jar
+	www/tb0.jar=${target-dir}/tb0.jar, \
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar, \
+	www/tlx.jar=${target-dir}/tlx.jar
 include.tb3.jar = \
  org/osgi/test/cases/framework/dynpkgimport/tlx/TestLib.properties=TestLib_tb3.properties
 include.tlx.jar = \
