--- a/org.osgi.test.cases.framework.lifecycle/build.properties
+++ b/org.osgi.test.cases.framework.lifecycle/build.properties
@@ -15,19 +15,19 @@ expand.org.osgi.test.cases.framework.lifecycle.jar = org.osgi.test.cases.framewo
 expand.tbc.jar = org.osgi.test.cases.framework.lifecycle.tbc, \
     org.osgi.test.cases.framework.lifecycle.servicereferencegetter, \
     org.osgi.test.cases.logproxy
-include.org.osgi.test.cases.framework.lifecycle.jar = tbc.jar=tbc.jar, \
+include.org.osgi.test.cases.framework.lifecycle.jar = tbc.jar=${target-dir}/tbc.jar, \
 	log.ref=log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2a.jar=tb2a.jar, \
-	www/tb2b.jar=tb2b.jar, \
-	www/tb4.jar=tb4.jar, \
-	www/tb5.jar=tb5.jar, \
-	www/tb6a.jar=tb6a.jar, \
-	www/tb6b.jar=tb6b.jar, \
-	www/tb7.jar=tb7.jar, \
-	www/tb8.jar=tb8.jar, \
-	www/tb9.jar=tb9.jar, \
-	www/tb10.jar=tb10.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2a.jar=${target-dir}/tb2a.jar, \
+	www/tb2b.jar=${target-dir}/tb2b.jar, \
+	www/tb4.jar=${target-dir}/tb4.jar, \
+	www/tb5.jar=${target-dir}/tb5.jar, \
+	www/tb6a.jar=${target-dir}/tb6a.jar, \
+	www/tb6b.jar=${target-dir}/tb6b.jar, \
+	www/tb7.jar=${target-dir}/tb7.jar, \
+	www/tb8.jar=${target-dir}/tb8.jar, \
+	www/tb9.jar=${target-dir}/tb9.jar, \
+	www/tb10.jar=${target-dir}/tb10.jar
 expand.tb1.jar = org.osgi.test.cases.framework.lifecycle.tb1
 expand.tb2a.jar = org.osgi.test.cases.framework.lifecycle.tb2a
 expand.tb2b.jar = org.osgi.test.cases.framework.lifecycle.tb2b
