--- a/org.osgi.test.cases.framework.registry/build.properties
+++ b/org.osgi.test.cases.framework.registry/build.properties
@@ -4,6 +4,6 @@ jars.compile.order = tb2.jar \
 expand.org.osgi.test.cases.framework.registry.jar = org.osgi.test.cases.framework.registry
 expand.tbc.jar = org.osgi.test.cases.framework.registry.tbc
 expand.tb2.jar = org.osgi.test.cases.framework.registry.tb2
-include.org.osgi.test.cases.framework.registry.jar = tbc.jar, \
+include.org.osgi.test.cases.framework.registry.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb2.jar=tb2.jar
+	www/tb2.jar=${target-dir}/tb2.jar
