--- a/org.osgi.test.cases.framework.syncbundlelistener/build.properties
+++ b/org.osgi.test.cases.framework.syncbundlelistener/build.properties
@@ -12,10 +12,9 @@ expand.tb1.jar = org.osgi.test.cases.framework.syncbundlelistener.tb1
 expand.tb2.jar = org.osgi.test.cases.framework.syncbundlelistener.tb2
 expand.tb3.jar = org.osgi.test.cases.framework.syncbundlelistener.tb3
 expand.tb4.jar = org.osgi.test.cases.framework.syncbundlelistener.tb4
-include.org.osgi.test.cases.framework.syncbundlelistener.jar = tbc.jar, \
+include.org.osgi.test.cases.framework.syncbundlelistener.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar, \
-	www/tb4.jar=tb4.jar, \
-	www/tb4.jar=tb4.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar, \
+	www/tb4.jar=${target-dir}/tb4.jar
