--- a/org.osgi.test.cases.metatype/build.properties
+++ b/org.osgi.test.cases.metatype/build.properties
@@ -15,7 +15,7 @@ include.tb1.jar = OSGI-INF/l10n/bundle.properties=tb1/bundle.properties, \
  OSGI-INF/l10n/bundle_du.properties=tb1/bundle_du.properties, \
  OSGI-INF/l10n/bundle_du_NL.properties=tb1/bundle_du_NL.properties, \
  OSGI-INF/metatype/testfile.xml=tb1/testfile.xml
-include.${p}.jar = tbc.jar, \
+include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar
