--- a/org.osgi.test.cases.packageadmin.tc1/build.properties
+++ b/org.osgi.test.cases.packageadmin.tc1/build.properties
@@ -5,12 +5,12 @@ jars.compile.order = tbc.jar, \
                      org.osgi.test.cases.packageadmin.tc1.jar
 expand.org.osgi.test.cases.packageadmin.tc1.jar = org.osgi.test.cases.packageadmin.tc1
 expand.tbc.jar = org.osgi.test.cases.packageadmin.tc1.tbc
-include.org.osgi.test.cases.packageadmin.tc1.jar = tbc.jar, \
+include.org.osgi.test.cases.packageadmin.tc1.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tbc.jar=tbc.jar, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar
+	www/tbc.jar=${target-dir}/tbc.jar, \
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar
 expand.tb1.jar = [org.osgi.test.cases.packageadmin.tc1.tb1]
 expand.tb2.jar = [org.osgi.test.cases.packageadmin.tc1.tb2]
 expand.tb3.jar = [org.osgi.test.cases.packageadmin.tc1.tb3]
