--- a/org.osgi.test.cases.packageadmin.tc2/build.properties
+++ b/org.osgi.test.cases.packageadmin.tc2/build.properties
@@ -9,15 +9,15 @@ jars.compile.order = tbc.jar, \
                      org.osgi.test.cases.packageadmin.tc2.jar
 expand.org.osgi.test.cases.packageadmin.tc2.jar = org.osgi.test.cases.packageadmin.tc2
 expand.tbc.jar = [org.osgi.test.cases.packageadmin.tc2.tbc]
-include.org.osgi.test.cases.packageadmin.tc2.jar = tbc.jar, \
+include.org.osgi.test.cases.packageadmin.tc2.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tbc.jar=tbc.jar, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar, \
-	www/tb4.jar=tb4.jar, \
-	www/tb5.jar=tb5.jar
-include.tb5.jar = www/tb1.jar=tb3.jar
+	www/tbc.jar=${target-dir}/tbc.jar, \
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar, \
+	www/tb4.jar=${target-dir}/tb4.jar, \
+	www/tb5.jar=${target-dir}/tb5.jar
+include.tb5.jar = www/tb1.jar=${target-dir}/tb3.jar
 expand.tb1.jar = [org.osgi.test.cases.packageadmin.tc2.tb1]
 expand.tb2.jar = [org.osgi.test.cases.packageadmin.tc2.tb2]
 expand.tb3.jar = [org.osgi.test.cases.packageadmin.tc2.tb3]
