--- a/org.osgi.test.cases.permissionadmin.conditional/build.properties
+++ b/org.osgi.test.cases.permissionadmin.conditional/build.properties
@@ -15,9 +15,9 @@ expand.tb2.jar = [${p}.tb2]
 expand.tb3.jar = [${p}.tb3]
 expand.testcond.jar = [${p}.testcond]
 include.tb2.jar = OSGI-INF/permissions.perm=OSGI-INF/permissions.perm
-include.${p}.jar = tbc.jar, \
+include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar
 	
