--- a/org.osgi.test.cases.http/build.properties
+++ b/org.osgi.test.cases.http/build.properties
@@ -6,7 +6,7 @@ expand.tbc.jar = org.osgi.test.cases.http.tbc, \
      org.osgi.test.cases.http.tbc.www, \
      org.osgi.service.permissionadmin
 expand.tb1.jar = org.osgi.test.cases.http.tbc.tb1
-include.tbc.jar = tb1.jar
-include.org.osgi.test.cases.http.jar = tbc.jar=tbc.jar, \
+include.tbc.jar = ${target-dir}/tb1.jar
+include.org.osgi.test.cases.http.jar = tbc.jar=${target-dir}/tbc.jar, \
 	log.ref=log.ref
 	
