--- a/org.osgi.test.cases.measurement/build.properties
+++ b/org.osgi.test.cases.measurement/build.properties
@@ -2,5 +2,5 @@ jars.compile.order = tbc.jar, \
                      org.osgi.test.cases.measurement.jar
 expand.org.osgi.test.cases.measurement.jar = org.osgi.test.cases.measurement
 expand.tbc.jar = [org.osgi.test.cases.measurement.tbc]
-include.org.osgi.test.cases.measurement.jar = tbc.jar=tbc.jar, \
+include.org.osgi.test.cases.measurement.jar = tbc.jar=${target-dir}/tbc.jar, \
 	log.ref=log.ref
