--- a/org.osgi.test.cases.monitor/build.properties
+++ b/org.osgi.test.cases.monitor/build.properties
@@ -12,10 +12,10 @@ expand.tb3.jar = [${p}.tb3.*]
 expand.tb4.jar = [${p}.tb4.*]
 expand.tb5.jar = [${p}.tb5.*]
 expand.tbc.jar = [${p}.tbc.*]
-include.${p}.jar = tbc.jar, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar, \
-	www/tb4.jar=tb4.jar, \
-	www/tb5.jar=tb5.jar
+include.${p}.jar = ${target-dir}/tbc.jar, \
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar, \
+	www/tb4.jar=${target-dir}/tb4.jar, \
+	www/tb5.jar=${target-dir}/tb5.jar
 	
