--- a/org.osgi.test.cases.packageadmin.tc3/.classpath
+++ b/org.osgi.test.cases.packageadmin.tc3/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/osgi.released/ee.minimum.jar" sourcepath="/osgi.released/ee.minimum.jar"/>
-	<classpathentry kind="lib" path="/osgi.released/osgi.jar" sourcepath="/osgi.released/osgi.jar"/>
+	<classpathentry kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.1.3.jar" sourcepath="/cnf/repo/ee.minimum/ee.minimum-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/cnf/repo/osgi/osgi-4.0.0.jar" sourcepath="/cnf/repo/osgi/osgi-4.0.0.jar"/>
 	<classpathentry kind="lib" path="/osgi.released/osgi.internal.jar" sourcepath="/osgi.released/osgi.internal.jar"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
