--- a/org.osgi.test.cases.packageadmin.tc5/build.properties
+++ b/org.osgi.test.cases.packageadmin.tc5/build.properties
@@ -14,11 +14,11 @@ expand.tb4.jar = ${p}.tb4
 expand.tb5.jar = ${p}.tb5
 expand.tb6.jar = ${p}.tb6
 expand.tbc.jar = ${p}.tbc, ${p}.tbc.PackageAdmin, ${p}.tbc.ExportedPackage, ${p}.tbc.RequiredBundle
-include.${p}.jar = tbc.jar, \
+include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=tb1.jar, \
-	www/tb2.jar=tb2.jar, \
-	www/tb3.jar=tb3.jar, \
-	www/tb4.jar=tb4.jar, \
-	www/tb5.jar=tb5.jar, \
-	www/tb6.jar=tb6.jar
+	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb3.jar=${target-dir}/tb3.jar, \
+	www/tb4.jar=${target-dir}/tb4.jar, \
+	www/tb5.jar=${target-dir}/tb5.jar, \
+	www/tb6.jar=${target-dir}/tb6.jar
