--- a/org.osgi.test.cases.permissionadmin.main/build.properties
+++ b/org.osgi.test.cases.permissionadmin.main/build.properties
@@ -5,5 +5,5 @@ jars.compile.order = contextsharer.jar, \
 expand.org.osgi.test.cases.permissionadmin.main.jar = org.osgi.test.cases.permissionadmin.main
 expand.tbc.jar = org.osgi.test.cases.permissionadmin.main.tbc
 expand.contextsharer.jar = org.osgi.test.cases.permissionadmin.main.contextsharer
-include.org.osgi.test.cases.permissionadmin.main.jar = tbc.jar, log.ref, \
-   www/contextsharer.jar=contextsharer.jar
+include.org.osgi.test.cases.permissionadmin.main.jar = ${target-dir}/tbc.jar, log.ref, \
+   www/contextsharer.jar=${target-dir}/contextsharer.jar
