--- a/org.osgi.test.cases.permissionadmin.nosecurity/build.properties
+++ b/org.osgi.test.cases.permissionadmin.nosecurity/build.properties
@@ -3,4 +3,4 @@ jars.compile.order = tbc.jar,\
                      org.osgi.test.cases.permissionadmin.nosecurity.jar
 expand.org.osgi.test.cases.permissionadmin.nosecurity.jar = org.osgi.test.cases.permissionadmin.nosecurity
 expand.tbc.jar = org.osgi.test.cases.permissionadmin.nosecurity.tbc
-include.org.osgi.test.cases.permissionadmin.nosecurity.jar = tbc.jar, log.ref
+include.org.osgi.test.cases.permissionadmin.nosecurity.jar = ${target-dir}/tbc.jar, log.ref
