--- a/org.osgi.test.cases.permissionadmin.security/build.properties
+++ b/org.osgi.test.cases.permissionadmin.security/build.properties
@@ -3,4 +3,4 @@ jars.compile.order = tbc.jar,\
                      org.osgi.test.cases.permissionadmin.security.jar
 expand.org.osgi.test.cases.permissionadmin.security.jar = org.osgi.test.cases.permissionadmin.security
 expand.tbc.jar = org.osgi.test.cases.permissionadmin.security.tbc
-include.org.osgi.test.cases.permissionadmin.security.jar = tbc.jar, log.ref
+include.org.osgi.test.cases.permissionadmin.security.jar = ${target-dir}/tbc.jar, log.ref
